# android-to-mac

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEBUGGING.md  PROTOCOL.md  README.md  SETUP.md
mirrorcore-android-agent/: README.md  gradlew  gradlew.bat  settings.gradle.kts
mirrorcore-android-agent/app/: build.gradle.kts
mirrorcore-android-agent/app/src/main/: AndroidManifest.xml
mirrorcore-android-agent/gradle/wrapper/: gradle-wrapper.properties
mirrorcore-connection-suite/: Cargo.toml  README.md
mirrorcore-connection-suite/src/: adb.rs  audio.rs  control.rs  main.rs  mcb1.rs  video.rs
mirrorcore-macos/: Package.swift
mirrorcore-macos/Sources/MirrorCoreMac/: main.swift
mirrorcore-macos/Sources/MirrorCoreMac/App/: MirrorCoreApp.swift  MirrorWindow.swift
mirrorcore-macos/Sources/MirrorCoreMac/Audio/: AudioPlayer.swift
mirrorcore-macos/Sources/MirrorCoreMac/Clipboard/: ClipboardSync.swift
mirrorcore-macos/Sources/MirrorCoreMac/FileTransfer/: FileTransferManager.swift
mirrorcore-macos/Sources/MirrorCoreMac/Input/: InputMapper.swift  KeycodeMap.swift  ShortcutManager.swift
mirrorcore-macos/Sources/MirrorCoreMac/Network/: ADBBridge.swift  AudioChannel.swift  BonjourDiscovery.swift  ConnectionManager.swift  ControlChannel.swift  (+2 more)
mirrorcore-protocol/: Cargo.toml
mirrorcore-protocol-cli/: Cargo.toml  README.md
mirrorcore-protocol-cli/src/: main.rs
mirrorcore-protocol/src/: codec.rs  constants.rs  enums.rs  error.rs  frame.rs  header.rs  lib.rs  payload.rs  types.rs
mirrorcore-protocol/tests/: framing.rs
scripts/: mirrorcore-run.sh
(+40 files in other folders)
