[package]
name = "mirrorcore-protocol-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mirrorcore-protocol = { path = "../mirrorcore-protocol" }

clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"
